--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
